--- a/Cars Game/README
+++ b/Cars Game/README
@@ -1,3 +1,5 @@
 	Joc 2D cu masini de curse.
-Video cu prezentarea jocului: 
-	https://www.youtube.com/watch?v=i2A1nKaq4K8&ab_channel=Dragos-AndreiBoncu 
+Video cu prezentarea jocului, versiunea 2020 (prototip): 
+	https://www.youtube.com/watch?v=i2A1nKaq4K8&ab_channel=Dragos-AndreiBoncu
+Video cu prezentarea jocului, versiunea 2022:
+	https://www.youtube.com/watch?v=TbwTLorOAcg&ab_channel=Drago%C8%99-AndreiBoncu
